--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     </head>
     <body>
-        <h1>Look into console</h1>
+        <h1>Look into the console ===============> </h1>
         <script src='script.js'></script>
     </body>
 </html>
